[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
jupyter = "^1.0.0"
jupyterlab = "^3.0.14"
scikit-learn = "^0.24.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
